--- a/renderer/src/locales/fr.json
+++ b/renderer/src/locales/fr.json
@@ -1,10 +1,10 @@
 {
   "app": {
-    "title": "Mon App Electron",
+    "title": "ChatBot Maker",
     "nav": {
       "home": "Accueil",
       "jokes": "Blagues",
-      "chat": "Chat LLM",
+      "chat": "Chat",
       "history": "Historique"
     }
   },
